--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,15 @@
     <string name="pref_sort_label">Sort by</string>
     <string name="pref_units_label_popular">Most Popular</string>
     <string name="pref_units_label_rating">Highest Rating</string>
+    <string name="pref_units_label_favorites">Favorites</string>
 
 
     <string name="pref_sort_key" translatable="false">sort by</string>
     <string name="pref_sort_popular">Popular</string>
+    <string name="pref_sort_rating">Rating</string>
+    <string name="pref_sort_favorites">Favorites</string>
 
     <string name="pref_popular">Popular</string>
     <string name="pref_rating">Rating</string>
+    <string name="pref_favorites">Favorites</string>
 </resources>
